extends Control


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass




func _on_countdown_pressed():
	pass # Replace with function body.


func _on_cancel_back_pressed():
	get_tree().change_scene_to_file("res://starting_folder/main_menu.tscn")


func _on_heading_pressed():
	pass # Replace with function body.


func _on_pitch_pressed():
	pass # Replace with function body.


func _on_bomb_size_pressed():
	pass # Replace with function body.


func _on_wait_time_pressed():
	pass # Replace with function body.
